# cuda-reduction-kernel

./: CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
include/: reduce.h  utils.h
src/: cuReduce.cu  reduce.cu  test_case.cu
